Switch to Evasi0n's trees (sm8150-common team)