@@ -1,2 +1,3 @@
-Use FlameGapps Basic.
-Thanks to every member of the sm8150-common team!
+FW NOT included! Flash latest China or 12.0.5.0 EEA/Global.
+If WiFi doesn't work for you, then your persist is broken.
+GApps suggested: NikGapps/FlameGapps basic.
